--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "test-socket-server",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "author": "Matan Amir <github-contrib@ematan.com> (http://www.n0tw0rthy.com)",
     "description": "Test socket server that sends back variable framed random data",
     "main": "index.js",
     "dependencies": {
         "framing-buffer": "*",
-        "offset-buffer": "*",
-        "when": "~1.8.1"
+        "offset-buffer": "*"
     },
     "devDependencies": {
         "tap": "*",
